--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ AUTO_READ_MESSAGES=false
 CHATBOT=true
 AUTO_REACT=false
 WELCOME=false
-PREFIX=_
+PREFIX=.
 AUTO_BIO=true
 ANTICALL=true
 ANTILINK=false
